Added basic presentation info and set to 0 margin and padding also added the border-box sizing

--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
     </header>
 
     <div class="container">
+
+        <div class="presentation">
+           <h2>Hey there I&#39m Alex</h2>
+        <h4>I&#39am a Software Developer</h4>
+        <p>I can help you build a product, feature or<br>
+            website Look through some of my work <br>
+             and experience! If you like what you see <br>
+              and have a project you need coded, <br>
+            don&#39t hestiate to contact me.</p> 
+            <div class="icons">
+                
+            </div>
+        </div>
         
     </div>
 </body>
