--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               and have a project you need coded, <br>
             don&#39t hestiate to contact me.</p> 
             <div class="icons">
-                
+                <p>ICONOS AQUI</p>
             </div>
         </div>
         
