--- a/index.html
+++ b/index.html
@@ -33,19 +33,20 @@
 
         <div class="presentation1">
         <div class="presentation">
-           <h2>Hey there I&#39m Polo</h2>
+           <h2>Hey there. <br> I&#39m Polo</h2>
         <h4>I&#39am a Software Developer</h4>
         <p>I can help you build a product, feature or<br>
             website Look through some of my work <br>
              and experience! If you like what you see <br>
               and have a project you need coded, <br>
             don&#39t hestiate to contact me.</p> 
+
             <div class="icons">
-                <div> <img src="images/icons/github.svg" alt=""> </div>
+                <div> <img src="images/icons/github.svg" alt="img"> </div>
                 <div><i class="fab fa-linkedin-in"></i></div>
-                <div><img src="images/icons/peace.svg" alt=""></div>
-                <div><img src="images/icons/twitt.svg" alt=""></div>
-                <div><img src="images/icons/medium.svg" alt=""></div>
+                <div><img src="images/icons/peace.svg" alt="peace"></div>
+                <div><img src="images/icons/twitt.svg" alt="twitter"></div>
+                <div><img src="images/icons/medium.svg" alt="medium"></div>
  
             </div>
         </div>
