--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="icons">
                 <div> <img src="images/icons/github.svg" alt="img"> </div>
-                <div><i class="fab fa-linkedin-in"></i></div>
+                <div><img src="images/icons/lin.svg" alt="img"></div>
                 <div><img src="images/icons/peace.svg" alt="peace"></div>
                 <div><img src="images/icons/twitt.svg" alt="twitter"></div>
                 <div><img src="images/icons/medium.svg" alt="medium"></div>
