--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
         <div class="presentation1">
             <div class="presentation">
-                <h2>Hey there&#46 <br> I&#39m Polo</h2>
+                <h2>Hey there. <br> I'm Polo</h2>
                 <h4>I&#39am a Software Developer</h4>
                 <p>I can help you build a product, feature or<br>
                     website Look through some of my work <br>
