--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <div class="presentation1">
             <div class="presentation">
                 <h2>Hey there. <br> I'm Polo</h2>
-                <h4>I&#39am a Software Developer</h4>
+                <!-- <h4>I am a Software Developer</h4> -->
                 <p>I can help you build a product, feature or<br>
                     website Look through some of my work <br>
                      and experience! If you like what you see <br>
                       and have a project you need coded, <br>
-                    don&#39t hestiate to contact me.</p>
+                    don't hestiate to contact me.</p>
                     <div class="icons">
                         <div> <img src="images/icons/github.svg" alt="img"> </div>
                         <div><img src="images/icons/lin.svg" alt="img"></div>
