--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="presentation1">
             <div class="presentation">
                 <h2>Hey there. <br> I'm Polo</h2>
-                <!-- <h4>I am a Software Developer</h4> -->
+                <h4>I am a Software Developer</h4>
                 <p>I can help you build a product, feature or<br>
                     website Look through some of my work <br>
                      and experience! If you like what you see <br>
