Changed the  h2 tag for an a tag as requiered by the reviewer to meet the syntaxis criteria.#1

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="header1">
 
     <header>
-        <h2 class="company">Jorge Polo</h2>
+        <a class="company">Jorge Polo</a>
         
         <i class="fas fa-bars"></i>
         
