--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                      and experience! If you like what you see <br>
                       and have a project you need coded, <br>
                     don't hestiate to contact me.</p>
-                    <div class="icons">
-                        <div> <img src="images/icons/github.svg" alt="img"> </div>
-                        <div><img src="images/icons/lin.svg" alt="img"></div>
-                        <div><img src="images/icons/peace.svg" alt="peace"></div>
-                        <div><img src="images/icons/twitt.svg" alt="twitter"></div>
-                        <div><img src="images/icons/medium.svg" alt="medium"></div>
-                    </div>
+                    <ul class="icons">
+                        <li> <img src="images/icons/github.svg" alt="Github-img"> </li>
+                        <li><img src="images/icons/lin.svg" alt="Linkin-img"></li>
+                        <li><img src="images/icons/peace.svg" alt="peace"></li>
+                        <li><img src="images/icons/twitt.svg" alt="twitter-img"></li>
+                        <li><img src="images/icons/medium.svg" alt="Medium website-img"></li>
+                    </ul>
             </div>
         </div>
     </div>
