--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </section>
 
-    <div class="container">
+<section class="container">
         <div class="presentation1">
             <div class="presentation">
                 <h1>Hey there. <br> I'm Polo</h1>
@@ -49,7 +49,7 @@
                     </ul>
             </div>
         </div>
-    </div>
+</section>
     
 </body>
 </html>
