Added the tittlecontainer

--- a/index.html
+++ b/index.html
@@ -85,5 +85,14 @@
         </div>
       </div>
     </section>
+    
+    <!-- Previous works start here -->
+    <section class="main-card-container">
+      <div class="title-container">
+        <h3 class="internal-title">My Recent Works</h3>
+        <hr class="line-deco">
+      </div>
+
+    </section>
   </body>
 </html>
