Added the line image under my recent works title

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
     <section class="main-card-container">
       <div class="title-container">
         <h3 class="internal-title">My Recent Works</h3>
-        <hr class="line-deco">
+  
+        <img src="images/line.svg" alt="">
       </div>
 
     </section>
