--- a/index.html
+++ b/index.html
@@ -91,8 +91,34 @@
       <div class="title-container">
         <h3 class="internal-title">My Recent Works</h3>
   
-        <img src="images/line.svg" alt="">
+        <img src="images/line.svg" alt="line-division">
       </div>
+
+      <section class="second-main-card-container">
+        <div class="card1">
+          <div class="card1-img-container">
+            <img src="" alt="">
+          </div>
+          <h3>Multi-Post Stories</h3>
+          
+          <p>A daily selection of privately personalized <br> 
+            reads; no accounts or sign-ups required. <br> 
+            has been the industry's standard dummy <br>
+            text ever since the 1500s, when an <br> 
+            unknown printer took a standard dummy <br>
+            text.</p>
+
+            <ul class="technologies-card1">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+            </ul>
+            <button class="button-card1">See Project</button>
+
+        </div>
+
+      </section>
 
     </section>
   </body>
