--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
       <section class="second-main-card-container">
         <div class="card1">
           <div class="card1-img-container">
-            <img src="" alt="">
+            <img src="images/card-image/card1.svg" alt="previous-work-1">
           </div>
-          <h3>Multi-Post Stories</h3>
-          
-          <p>A daily selection of privately personalized <br> 
+          <h3 class="card1-h3">Multi-Post Stories</h3>
+
+          <p class="card1-p">A daily selection of privately personalized <br> 
             reads; no accounts or sign-ups required. <br> 
             has been the industry's standard dummy <br>
             text ever since the 1500s, when an <br> 
