Added the grid propierty

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       </div>
 
       <section class="second-main-card-container">
+
         <div class="card1">
           <div class="card1-img-container">
             <img src="images/card-image/card1.svg" alt="previous-work-1">
@@ -117,6 +118,30 @@
             <button class="button-card1">See Project</button>
 
         </div>
+
+        <div class="card1">
+          <div class="card1-img-container">
+            <img src="images/card-image/card1.svg" alt="previous-work-1">
+          </div>
+          <h3 class="card1-h3">SECOND CARD</h3>
+
+          <p class="card1-p">A daily selection of privately personalized <br> 
+            reads; no accounts or sign-ups required. <br> 
+            has been the industry's standard dummy <br>
+            text ever since the 1500s, when an <br> 
+            unknown printer took a standard dummy <br>
+            text.</p>
+
+            <ul class="technologies-card1">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+            </ul>
+            <button class="button-card1">See Project</button>
+
+        </div>
+
 
       </section>
 
