Added the style for the main part of the mobile version

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <title>Porfolio</title>
   </head>
   <body>
+    
     <section class="header1">
       <header>
         <a class="company">Jorge Polo</a>
@@ -34,7 +35,11 @@
       </header>
     </section>
 
-    <section class="container">
+
+
+
+
+    <section class="container-main">
       <div class="presentation1">
         <div class="presentation">
           <h1>
@@ -86,9 +91,8 @@
       </div>
     </section>
 
-    <div class="container">
-      <!-- <nav>NAVBAR</nav> -->
-      <!-- <main>MAIN</main> -->
+    <div class="container-works" style="border: 2px solid;">
+      
       <div class="division">DIVISION</div>
       <div class="card-row1">ROW1</div>
       <div class="card-row2">ROW2</div>
