Added style to the division section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 
-
+<!-- main introduction -->
 
     <section class="container-main">
       <div class="presentation1">
@@ -90,15 +90,25 @@
         </div>
       </div>
     </section>
+<!-- end of main introduction -->
 
-    <div class="container-works" style="border: 2px solid;">
+<!-- start previous works -->
+    <section class="container-works">
       
-      <div class="division">DIVISION</div>
+      <div class="division">
+        <div class="title-container">
+          <h3 class="internal-title">My Recent Works</h3>
+    
+          <img src="images/line.svg" alt="line-division">
+        </div>
+
+      </div>
+
       <div class="card-row1">ROW1</div>
       <div class="card-row2">ROW2</div>
       <div class="about-me">ABOUT ME</div>
       <div class="form">FORM</div>
       <footer>FOOTER</footer>
-    </div>
+    </section >  
   </body>
 </html>
