--- a/index.html
+++ b/index.html
@@ -104,7 +104,31 @@
 
       </div>
 
-      <div class="card-row1">ROW1</div>
+      <div class="card-row1">
+
+        <div class="card1-img-container">
+          <img src="images/card-image/card1.svg" alt="previous-work-1">
+        </div>
+        
+        <h3 class="card1-h3">Multi-Post Stories</h3>
+
+          <p class="card1-p">A daily selection of privately personalized <br> 
+            reads; no accounts or sign-ups required. <br> 
+            has been the industry's standard dummy <br>
+            text ever since the 1500s, when an <br> 
+            unknown printer took a standard dummy <br>
+            text.</p>
+
+            <ul class="technologies-card1">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+            </ul>
+            <button class="button-card1">See Project</button>
+      </div>
+
+
       <div class="card-row2">ROW2</div>
       <div class="about-me">ABOUT ME</div>
       <div class="form">FORM</div>
