Removed xtra lines from the card 1

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="title-container">
           <h3 class="internal-title">My Recent Works</h3>
     
-          <img src="images/line.svg" alt="line-division">
+          <img class="line-image" src="images/line.svg" alt="line-division">
         </div>
 
       </div>
