Added card number 3

--- a/index.html
+++ b/index.html
@@ -129,7 +129,44 @@
       </div>
 
 
-      <div class="card-row2">ROW2</div>
+      <div class="card-row2">
+        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+
+          <p class="u-card-p">A daily selection of privately <br>
+             personalized reads; no accounts or <br>
+             sign-ups required. has been the <br>
+             industry's standard</p>
+
+            <ul class="u-card-technologies">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+            </ul>
+            <button class="u-button-card">See Project</button>
+      </div>
+
+      <div class="card-row3">pppppp
+        kpokpkk
+        kpk
+        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+
+        <p class="u-card-p">A daily selection of privately <br>
+           personalized reads; no accounts or <br>
+           sign-ups required. has been the <br>
+           industry's standard</p>
+
+          <ul class="u-card-technologies">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+      </div>
+      <div class="card-row4">ROW 4</div>
+      <div class="card-row5">ROW 5</div>
+      <div class="card-row6">ROW 6</div>
+      <div class="card-row7">ROW 7</div>
+      <div class="card-row8">ROW 8</div>
       <div class="about-me">ABOUT ME</div>
       <div class="form">FORM</div>
       <footer>FOOTER</footer>
