--- a/index.html
+++ b/index.html
@@ -145,9 +145,37 @@
             <button class="u-button-card">See Project</button>
       </div>
 
-      <div class="card-row3">pppppp
-        kpokpkk
-        kpk
+      <div class="card-row3">
+        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+
+          <p class="u-card-p">A daily selection of privately <br>
+             personalized reads; no accounts or <br>
+             sign-ups required. has been the <br>
+             industry's standard</p>
+
+            <ul class="u-card-technologies">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+            </ul>
+            <button class="u-button-card">See Project</button>
+      </div>
+      <div class="card-row4">
+        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+
+          <p class="u-card-p">A daily selection of privately <br>
+             personalized reads; no accounts or <br>
+             sign-ups required. has been the <br>
+             industry's standard</p>
+
+            <ul class="u-card-technologies">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+            </ul>
+            <button class="u-button-card">See Project</button>
+      </div>
+      <div class="card-row5">
         <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
         <p class="u-card-p">A daily selection of privately <br>
@@ -162,12 +190,87 @@
           </ul>
           <button class="u-button-card">See Project</button>
       </div>
-      <div class="card-row4">ROW 4</div>
-      <div class="card-row5">ROW 5</div>
-      <div class="card-row6">ROW 6</div>
-      <div class="card-row7">ROW 7</div>
-      <div class="card-row8">ROW 8</div>
-      <div class="about-me">ABOUT ME</div>
+      <div class="card-row6">
+        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+
+        <p class="u-card-p">A daily selection of privately <br>
+           personalized reads; no accounts or <br>
+           sign-ups required. has been the <br>
+           industry's standard</p>
+
+          <ul class="u-card-technologies">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+      </div>
+      <div class="card-row7">
+        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+
+        <p class="u-card-p">A daily selection of privately <br>
+           personalized reads; no accounts or <br>
+           sign-ups required. has been the <br>
+           industry's standard</p>
+
+          <ul class="u-card-technologies">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+      </div>
+      <div class="card-row8">
+        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+
+        <p class="u-card-p">A daily selection of privately <br>
+           personalized reads; no accounts or <br>
+           sign-ups required. has been the <br>
+           industry's standard</p>
+
+          <ul class="u-card-technologies">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+      </div>
+      <div class="about-me-main">
+        <div class="about-me-introduction">
+          <h3 class="about-me-h3">About me</h3>
+          <p class="about-me-p">
+              Hello I'm a software developer! I can help <br>
+              you build a product, feature or website <br>
+              Look through some of my work and <br>
+               experience! If you like what you see and <br>
+              have a project you need coded, don't <br>
+              hestiate to contact me.</p>
+              <button class="about-me-button">Get My Resume</button>
+              <img class="line-image-about" src="images/line.svg" alt="line-division">
+        </div>
+        <div class="about-me-technologies">
+          <ul>
+            <li class="about-title-skill">
+              <div class="emoji"><img src="images/icons/rombo.svg" alt="rombo"></div> Language</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li class="about-title-skill"><div class="emoji"><img src="images/icons/square.svg" alt="circle"></div> Frameworks</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li class="about-title-skill"><div class="emoji"><img src="images/icons/square.svg" alt="circle"></div>Skills</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
       <div class="form">FORM</div>
       <footer>FOOTER</footer>
     </section >  
