--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </section>
 
-    <section class="container-works">
+    <section class="container-mega">
       <div class="division">
         <div class="title-container">
           <h3 class="internal-title">My Recent Works</h3>
@@ -95,150 +95,152 @@
         </div>
       </div>
 
-      <div class="card-row1">
-        <div class="card1-img-container">
-          <img src="images/card-image/card1.svg" alt="previous-work-1" />
+      <div class="previous-works-container">
+        <div class="card-row1">
+          <div class="card1-img-container">
+            <img src="images/card-image/card1.svg" alt="previous-work-1" />
+          </div>
+
+          <h3 class="card1-h3">Multi-Post Stories</h3>
+
+          <p class="card1-p">
+            A daily selection of privately personalized <br />
+            reads; no accounts or sign-ups required. <br />
+            has been the industry's standard dummy <br />
+            text ever since the 1500s, when an <br />
+            unknown printer took a standard dummy <br />
+            text.
+          </p>
+
+          <ul class="technologies-card1">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button class="button-card1">See Project</button>
         </div>
 
-        <h3 class="card1-h3">Multi-Post Stories</h3>
+        <div class="card-row2">
+          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
-        <p class="card1-p">
-          A daily selection of privately personalized <br />
-          reads; no accounts or sign-ups required. <br />
-          has been the industry's standard dummy <br />
-          text ever since the 1500s, when an <br />
-          unknown printer took a standard dummy <br />
-          text.
-        </p>
+          <p class="u-card-p">
+            A daily selection of privately <br />
+            personalized reads; no accounts or <br />
+            sign-ups required. has been the <br />
+            industry's standard
+          </p>
 
-        <ul class="technologies-card1">
-          <li>css</li>
-          <li>html</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
-        </ul>
-        <button class="button-card1">See Project</button>
-      </div>
+          <ul class="u-card-technologies">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+        </div>
 
-      <div class="card-row2">
-        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+        <div class="card-row3">
+          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
-        <p class="u-card-p">
-          A daily selection of privately <br />
-          personalized reads; no accounts or <br />
-          sign-ups required. has been the <br />
-          industry's standard
-        </p>
+          <p class="u-card-p">
+            A daily selection of privately <br />
+            personalized reads; no accounts or <br />
+            sign-ups required. has been the <br />
+            industry's standard
+          </p>
 
-        <ul class="u-card-technologies">
-          <li>html</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
-        </ul>
-        <button class="u-button-card">See Project</button>
-      </div>
+          <ul class="u-card-technologies">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+        </div>
+        <div class="card-row4">
+          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
-      <div class="card-row3">
-        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+          <p class="u-card-p">
+            A daily selection of privately <br />
+            personalized reads; no accounts or <br />
+            sign-ups required. has been the <br />
+            industry's standard
+          </p>
 
-        <p class="u-card-p">
-          A daily selection of privately <br />
-          personalized reads; no accounts or <br />
-          sign-ups required. has been the <br />
-          industry's standard
-        </p>
+          <ul class="u-card-technologies">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+        </div>
+        <div class="card-row5">
+          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
-        <ul class="u-card-technologies">
-          <li>html</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
-        </ul>
-        <button class="u-button-card">See Project</button>
-      </div>
-      <div class="card-row4">
-        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+          <p class="u-card-p">
+            A daily selection of privately <br />
+            personalized reads; no accounts or <br />
+            sign-ups required. has been the <br />
+            industry's standard
+          </p>
 
-        <p class="u-card-p">
-          A daily selection of privately <br />
-          personalized reads; no accounts or <br />
-          sign-ups required. has been the <br />
-          industry's standard
-        </p>
+          <ul class="u-card-technologies">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+        </div>
+        <div class="card-row6">
+          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
-        <ul class="u-card-technologies">
-          <li>html</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
-        </ul>
-        <button class="u-button-card">See Project</button>
-      </div>
-      <div class="card-row5">
-        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+          <p class="u-card-p">
+            A daily selection of privately <br />
+            personalized reads; no accounts or <br />
+            sign-ups required. has been the <br />
+            industry's standard
+          </p>
 
-        <p class="u-card-p">
-          A daily selection of privately <br />
-          personalized reads; no accounts or <br />
-          sign-ups required. has been the <br />
-          industry's standard
-        </p>
+          <ul class="u-card-technologies">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+        </div>
+        <div class="card-row7">
+          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
-        <ul class="u-card-technologies">
-          <li>html</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
-        </ul>
-        <button class="u-button-card">See Project</button>
-      </div>
-      <div class="card-row6">
-        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+          <p class="u-card-p">
+            A daily selection of privately <br />
+            personalized reads; no accounts or <br />
+            sign-ups required. has been the <br />
+            industry's standard
+          </p>
 
-        <p class="u-card-p">
-          A daily selection of privately <br />
-          personalized reads; no accounts or <br />
-          sign-ups required. has been the <br />
-          industry's standard
-        </p>
+          <ul class="u-card-technologies">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+        </div>
+        <div class="card-row8">
+          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
-        <ul class="u-card-technologies">
-          <li>html</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
-        </ul>
-        <button class="u-button-card">See Project</button>
-      </div>
-      <div class="card-row7">
-        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+          <p class="u-card-p">
+            A daily selection of privately <br />
+            personalized reads; no accounts or <br />
+            sign-ups required. has been the <br />
+            industry's standard
+          </p>
 
-        <p class="u-card-p">
-          A daily selection of privately <br />
-          personalized reads; no accounts or <br />
-          sign-ups required. has been the <br />
-          industry's standard
-        </p>
-
-        <ul class="u-card-technologies">
-          <li>html</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
-        </ul>
-        <button class="u-button-card">See Project</button>
-      </div>
-      <div class="card-row8">
-        <h3 class="u-card-h3">Profesional Art Printing Data</h3>
-
-        <p class="u-card-p">
-          A daily selection of privately <br />
-          personalized reads; no accounts or <br />
-          sign-ups required. has been the <br />
-          industry's standard
-        </p>
-
-        <ul class="u-card-technologies">
-          <li>html</li>
-          <li>bootstrap</li>
-          <li>Ruby</li>
-        </ul>
-        <button class="u-button-card">See Project</button>
+          <ul class="u-card-technologies">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button class="u-button-card">See Project</button>
+        </div>
       </div>
 
       <div class="about-me-main">
