--- a/index.html
+++ b/index.html
@@ -313,11 +313,25 @@
       </div>
     </section>
     <section class="contact-form">
-      <ul>
-        <li class="li-fullname"></li>
-        <li class="li-email"></li>
-        <li class="li-textarea"></li>
-        <li class="li-button"></li>
+      <ul class="contact-main-list">
+        <li class="contact-intro">
+          <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+        </li>
+        <li class="li-fullname">
+          <label for="fullname hidden">Full Name</label>
+          <input  id="fullname" value="Full name" type="text">
+        </li>
+        <li class="li-email">
+          <label for="email hidden">Email</label>
+          <input  id="email" value="Email address" type="text">
+        </li>
+        <li class="li-textarea">
+          <label for="message-textarea hidden">Message</label>
+          <textarea id="message-textarea" value="Enter text here" cols="30" rows="10"></textarea>
+        </li>
+        <li class="li-button">
+          <button class="about-me-button">Get in touch</button>
+        </li>
       </ul>
     </section>
   </body>
