Style input feilds

--- a/index.html
+++ b/index.html
@@ -305,7 +305,8 @@
           <input id="email" placeholder="Email address" type="email" required>
         </li>
         <li class="li-textarea">
-          <textarea id="message-textarea" placeholder="Enter text here" cols="30" rows="10" maxlength="500" required></textarea>
+          <textarea id="message-textarea" placeholder="Enter text here" cols="30" rows="10" maxlength="500"
+            required></textarea>
         </li>
         <li class="li-button">
           <button class="about-me-button">Get in touch</button>
