Style subit button

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             required></textarea>
         </li>
         <li class="li-button">
-          <button class="about-me-button">Get in touch</button>
+          <button class="about-me-button" type="submit">Get in touch</button>
         </li>
       </ul>
     </form>
