--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <div class="contact-intro">
       <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
     </div>
-    <form action="#" method="post">
+    <form action="https://formspree.io/f/mayvwljj" method="post">
       <ul class="contact-main-list">
         <li class="li-fullname">
 
