--- a/index.html
+++ b/index.html
@@ -299,14 +299,14 @@
       <ul class="contact-main-list">
         <li class="li-fullname">
 
-          <input id="fullname" placeholder="Full name" type="text" maxlength="30" required>
+          <input id="fullname" placeholder="Full name" type="text" maxlength="30" name="name" required>
         </li>
         <li class="li-email">
-          <input id="email" placeholder="Email address" type="email" required>
+          <input id="email" placeholder="Email address" type="email" name="_replyto" required>
         </li>
         <li class="li-textarea">
           <textarea id="message-textarea" placeholder="Enter text here" cols="30" rows="10" maxlength="500"
-            required></textarea>
+          name="message" required></textarea>
         </li>
         <li class="li-button">
           <button class="about-me-button" type="submit">Get in touch</button>
