Added icons footer class and the last division line

--- a/index.html
+++ b/index.html
@@ -358,6 +358,42 @@
           </li>
         </ul>
       </form>
+      <div class="icons">
+        <ul class="icons-footer">
+          <li>
+            <a href="https://github.com/jpol01"
+              ><img src="images/icons/github.svg" alt="Github-img"
+            /></a>
+          </li>
+
+          <li>
+            <a href="https://www.linkedin.com/in/jorge-polo-b00b44155/"
+              ><img src="images/icons/lin.svg" alt="Linkin-image"
+            /></a>
+          </li>
+
+          <li>
+            <a href="https://angel.co/"
+              ><img
+                src="images/icons/peace.svg"
+                alt="Angellist-website-image"
+            /></a>
+          </li>
+
+          <li>
+            <a href="https://twitter.com/Jpol1902"
+              ><img src="images/icons/twitt.svg" alt="twitter-image"
+            /></a>
+          </li>
+
+          <li>
+            <a href="https://medium.com/"
+              ><img class="medium" src="images/icons/medium.svg" alt="Medium-website-image"
+            /></a>
+          </li>
+        </ul>
+      </div>
+      <hr>
     </footer>
   </body>
 </html>
