--- a/index.html
+++ b/index.html
@@ -362,38 +362,45 @@
         <ul class="icons-footer">
           <li>
             <a href="https://github.com/jpol01"
-              ><img src="images/icons/github.svg" alt="Github-img"
+              ><img src="images/icons/icons-dark/git-dark.svg" alt="Github-img"
             /></a>
           </li>
 
           <li>
             <a href="https://www.linkedin.com/in/jorge-polo-b00b44155/"
-              ><img src="images/icons/lin.svg" alt="Linkin-image"
+              ><img
+                src="images/icons/icons-dark/linked-dark.svg"
+                alt="Linkin-image"
             /></a>
           </li>
 
           <li>
             <a href="https://angel.co/"
               ><img
-                src="images/icons/peace.svg"
+                src="images/icons/icons-dark/angel-list-dark.svg"
                 alt="Angellist-website-image"
             /></a>
           </li>
 
           <li>
             <a href="https://twitter.com/Jpol1902"
-              ><img src="images/icons/twitt.svg" alt="twitter-image"
+              ><img
+                src="images/icons/icons-dark/twitter-dark.svg"
+                alt="twitter-image"
             /></a>
           </li>
 
           <li>
             <a href="https://medium.com/"
-              ><img class="medium" src="images/icons/medium.svg" alt="Medium-website-image"
+              ><img
+                class="medium"
+                src="images/icons/icons-dark/Medium-dark.svg"
+                alt="Medium-website-image"
             /></a>
           </li>
         </ul>
       </div>
-      <hr>
+      <hr />
     </footer>
   </body>
 </html>
