Added media query

--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
       <header>
         <a class="company">Jorge Polo</a>
 
-        <nav><i class="fas fa-bars"></i></nav>
+        <nav><i class="fas fa-bars"></i>
+          <ul class="header-menu">
+            <li>Portfolio</li>
+            <li>About</li>
+            <li>Contact</li>
+            <li><i class="far fa-envelope"></i></li>
+          </ul>
+        
+        </nav>
       </header>
     </section>
 
