--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           </h1>
           <h4>I am a Software Developer</h4>
           <p>
-            I can help you build a product, feature or<br />
-            website Look through some of my work <br />
-            and experience! If you like what you see <br />
-            and have a project you need coded, <br />
+            I can help you build a product, feature or
+            website Look through some of my work 
+            and experience! If you like what you see 
+            and have a project you need coded, 
             don't hestiate to contact me.
           </p>
           <ul class="icons">
