Added styling to the first previous work

--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
       <div class="previous-works-container">
         <div class="card-row1">
           <div class="card1-img-container">
-            <img src="images/card-image/card1.svg" alt="previous-work-1" />
+            <img class="card-img-size" src="images/card-image/card1.svg"  alt="previous-work-1" />
           </div>
 
+          <div class="container-info-card1">
           <h3 class="card1-h3">Multi-Post Stories</h3>
 
           <p class="card1-p">
@@ -129,8 +130,10 @@
           </ul>
           <button class="button-card1">See Project</button>
         </div>
+        </div>
 
-        <div class="card-row2">
+        <div class="container-grid-pworks">
+          <div class="card-row2">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
           <p class="u-card-p">
@@ -148,7 +151,7 @@
           <button class="u-button-card">See Project</button>
         </div>
 
-        <div class="card-row3">
+         <div class="card-row3">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
           <p class="u-card-p">
@@ -165,7 +168,7 @@
           </ul>
           <button class="u-button-card">See Project</button>
         </div>
-        <div class="card-row4">
+          <div class="card-row4">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
           <p class="u-card-p">
@@ -182,7 +185,7 @@
           </ul>
           <button class="u-button-card">See Project</button>
         </div>
-        <div class="card-row5">
+          <div class="card-row5">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
           <p class="u-card-p">
@@ -199,7 +202,7 @@
           </ul>
           <button class="u-button-card">See Project</button>
         </div>
-        <div class="card-row6">
+          <div class="card-row6">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
           <p class="u-card-p">
@@ -216,7 +219,7 @@
           </ul>
           <button class="u-button-card">See Project</button>
         </div>
-        <div class="card-row7">
+          <div class="card-row7">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
           <p class="u-card-p">
@@ -233,22 +236,7 @@
           </ul>
           <button class="u-button-card">See Project</button>
         </div>
-        <div class="card-row8">
-          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
-
-          <p class="u-card-p">
-            A daily selection of privately <br />
-            personalized reads; no accounts or <br />
-            sign-ups required. has been the <br />
-            industry's standard
-          </p>
-
-          <ul class="u-card-technologies">
-            <li>html</li>
-            <li>bootstrap</li>
-            <li>Ruby</li>
-          </ul>
-          <button class="u-button-card">See Project</button>
+          
         </div>
       </div>
 
