--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
 
     <section class="container-mega">
       <div class="division">
+        <div class="test-div">
         <div class="title-container">
           <h3 class="internal-title">My Recent Works</h3>
 
           <img class="line-image" src="images/line.svg" alt="line-division" />
+        </div>
         </div>
       </div>
 
@@ -114,11 +116,11 @@
           <h3 class="card1-h3">Multi-Post Stories</h3>
 
           <p class="card1-p">
-            A daily selection of privately personalized <br />
-            reads; no accounts or sign-ups required. <br />
-            has been the industry's standard dummy <br />
-            text ever since the 1500s, when an <br />
-            unknown printer took a standard dummy <br />
+            A daily selection of privately personalized 
+            reads; no accounts or sign-ups required. 
+            has been the industry's standard dummy 
+            text ever since the 1500s, when an 
+            unknown printer took a standard dummy 
             text.
           </p>
 
@@ -131,6 +133,7 @@
           <button class="button-card1">See Project</button>
         </div>
         </div>
+        
 
         <div class="container-grid-pworks">
           <div class="card-row2">
