Added 2 carg of the prevous works section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           </div>
 
           <div class="container-info-card1">
+            <div class="multipost-div">
           <h3 class="card1-h3">Multi-Post Stories</h3>
 
           <p class="card1-p">
@@ -131,22 +132,23 @@
             <li>Ruby</li>
           </ul>
           <button class="button-card1">See Project</button>
+          </div>
         </div>
         </div>
         
 
         <div class="container-grid-pworks">
           <div class="card-row2">
-          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+          <h3 class="u-card-h3 have2-hidden">Profesional Art Printing Data</h3>
 
-          <p class="u-card-p">
+          <p class="u-card-p have2-hidden">
             A daily selection of privately <br />
             personalized reads; no accounts or <br />
             sign-ups required. has been the <br />
             industry's standard
           </p>
 
-          <ul class="u-card-technologies">
+          <ul class="u-card-technologies have2-hidden">
             <li>html</li>
             <li>bootstrap</li>
             <li>Ruby</li>
@@ -155,7 +157,8 @@
         </div>
 
          <div class="card-row3">
-          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+          <h3 class="u-card-h3 have2-hidden">Profesional Art Printing Data</h3>
+          <h3 class="u-card-h3">Data Dashboard Healthcare</h3>
 
           <p class="u-card-p">
             A daily selection of privately <br />
@@ -169,7 +172,7 @@
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button class="u-button-card">See Project</button>
+          <button class="u-button-card card2-hidden">See Project</button>
         </div>
           <div class="card-row4">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
@@ -186,7 +189,7 @@
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button class="u-button-card">See Project</button>
+          <button class="u-button-card card2-hidden">See Project</button>
         </div>
           <div class="card-row5">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
@@ -203,7 +206,7 @@
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button class="u-button-card">See Project</button>
+          <button class="u-button-card card2-hidden">See Project</button>
         </div>
           <div class="card-row6">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
@@ -220,7 +223,7 @@
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button class="u-button-card">See Project</button>
+          <button class="u-button-card card2-hidden">See Project</button>
         </div>
           <div class="card-row7">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
@@ -237,7 +240,7 @@
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button class="u-button-card">See Project</button>
+          <button class="u-button-card card2-hidden">See Project</button>
         </div>
           
         </div>
