Added styling to the cards 4,5,6

--- a/index.html
+++ b/index.html
@@ -153,17 +153,18 @@
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button class="u-button-card">See Project</button>
+          <button class="u-button-card have2-hidden">See Project</button>
         </div>
 
          <div class="card-row3">
+           <div class="inner-universal-div-2lines">
           <h3 class="u-card-h3 have2-hidden">Profesional Art Printing Data</h3>
           <h3 class="u-card-h3">Data Dashboard Healthcare</h3>
 
           <p class="u-card-p">
-            A daily selection of privately <br />
-            personalized reads; no accounts or <br />
-            sign-ups required. has been the <br />
+            A daily selection of privately 
+            personalized reads; no accounts or 
+            sign-ups required. has been the 
             industry's standard
           </p>
 
@@ -173,14 +174,17 @@
             <li>Ruby</li>
           </ul>
           <button class="u-button-card card2-hidden">See Project</button>
+          </div>
         </div>
           <div class="card-row4">
-          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+            <div class="inner-universal-div-1line">
+          <h3 class="u-card-h3 have2-hidden">Profesional Art Printing Data</h3>
+          <h3 class="u-card-h3">Website Portfolio</h3>
 
           <p class="u-card-p">
-            A daily selection of privately <br />
-            personalized reads; no accounts or <br />
-            sign-ups required. has been the <br />
+            A daily selection of privately 
+            personalized reads; no accounts or 
+            sign-ups required. has been the 
             industry's standard
           </p>
 
@@ -189,10 +193,12 @@
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button class="u-button-card card2-hidden">See Project</button>
+          <button class="u-button-card have2-hidden">See Project</button>
+          </div>
         </div>
           <div class="card-row5">
-          <h3 class="u-card-h3">Profesional Art Printing Data</h3>
+          <h3 class="u-card-h3 have2-hidden">Profesional Art Printing Data</h3>
+          <h3 class="u-card-h3">Profesional Art Printing Data More</h3>
 
           <p class="u-card-p">
             A daily selection of privately <br />
@@ -204,26 +210,26 @@
           <ul class="u-card-technologies">
             <li>html</li>
             <li>bootstrap</li>
-            <li>Ruby</li>
+            <li>Ruby dde</li>
           </ul>
-          <button class="u-button-card card2-hidden">See Project</button>
+          <button class="u-button-card have2-hidden">See Project</button>
         </div>
           <div class="card-row6">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
 
           <p class="u-card-p">
-            A daily selection of privately <br />
+            123A daily selection of privately <br />
             personalized reads; no accounts or <br />
             sign-ups required. has been the <br />
             industry's standard
           </p>
 
-          <ul class="u-card-technologies">
+          <ul class="u-card-technologies have2-hidden">
             <li>html</li>
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button class="u-button-card card2-hidden">See Project</button>
+          <button class="u-button-card have2-hidden">See Project</button>
         </div>
           <div class="card-row7">
           <h3 class="u-card-h3">Profesional Art Printing Data</h3>
@@ -240,7 +246,7 @@
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button class="u-button-card card2-hidden">See Project</button>
+          <button class="u-button-card have2-hidden">See Project</button>
         </div>
           
         </div>
