--- a/index.html
+++ b/index.html
@@ -266,19 +266,22 @@
         <div class="about-me-introduction">
           <h3 class="about-me-h3">About me</h3>
           <p class="about-me-p">
-            Hello I'm a software developer! I can help <br />
-            you build a product, feature or website <br />
-            Look through some of my work and <br />
-            experience! If you like what you see and <br />
-            have a project you need coded, don't <br />
+            Hello I'm a software developer! I can help 
+            you build a product, feature or website 
+            Look through some of my work and 
+            experience! If you like what you see and
+            have a project you need coded, don't 
             hestiate to contact me.
           </p>
+          <div class="buton-resume-div">
           <button class="about-me-button">Get My Resume</button>
           <img
-            class="line-image-about"
+            class="line-image-about have2-hidden"
             src="images/line.svg"
             alt="line-division"
           />
+          <img class="line-division-aboutme-desk" src="images/line-division-aboutme-desktp.png" alt="line-division">
+        </div>
         </div>
 
         <div class="about-me-technologies">
@@ -333,6 +336,7 @@
     </section>
 
     <footer class="contact-form">
+        <div class="intro-contact-desktop">
       <div class="contact-intro">
         <p>
           I'm always interested in hearing about new projects, so if you'd like
@@ -376,7 +380,9 @@
           </li>
         </ul>
       </form>
-      <div class="icons">
+          </div>
+
+      <div class="icons icons-desktop">
         <ul class="icons-footer">
           <li>
             <a href="https://github.com/jpol01"
@@ -418,7 +424,7 @@
           </li>
         </ul>
       </div>
-      <hr />
+      <hr class="have2-hidden" />
     </footer>
   </body>
 </html>
