Added contact form

--- a/index.html
+++ b/index.html
@@ -153,13 +153,14 @@
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
-          <button class="u-button-card have2-hidden">See Project</button>
+          <button class="u-button-card ">See Project</button>
         </div>
 
          <div class="card-row3">
            <div class="inner-universal-div-2lines">
-          <h3 class="u-card-h3 have2-hidden">Profesional Art Printing Data</h3>
-          <h3 class="u-card-h3">Data Dashboard Healthcare</h3>
+          <h3 class="u-card-h3 have2-hidden ">Profesional Art Printing Data</h3>
+
+          <h3 class="u-card-h3 hidden-375">Data Dashboard Healthcare</h3>
 
           <p class="u-card-p">
             A daily selection of privately 
@@ -176,10 +177,14 @@
           <button class="u-button-card have2-hidden">See Project</button>
           </div>
         </div>
+
+
+
           <div class="card-row4">
             <div class="inner-universal-div-1line">
-          <h3 class="u-card-h3 have2-hidden">Profesional Art Printing Data</h3>
-          <h3 class="u-card-h3">Website Portfolio</h3>
+          <h3 class="u-card-h3 have2-hidden"> Profesional Art Printing Data</h3>
+
+          <h3 class="u-card-h3 hidden-375"> Website Portfolio</h3>
 
           <p class="u-card-p">
             A daily selection of privately 
@@ -199,7 +204,7 @@
           <div class="card-row5">
             <div class="inner-universal-div-2lines">
           <h3 class="u-card-h3 have2-hidden">Profesional Art Printing Data</h3>
-          <h3 class="u-card-h3">Profesional Art Printing Data More</h3>
+          <h3 class="u-card-h3 hidden-375">Profesional Art Printing Data More</h3>
 
           <p class="u-card-p">
             A daily selection of privately 
@@ -219,7 +224,7 @@
           <div class="card-row6">
             <div class="inner-universal-div-2lines">
           <h3 class="u-card-h3 have2-hidden">Profesional Art Printing Data</h3>
-          <h3 class="u-card-h3 ">Data Dashboard Healthcare</h3>
+          <h3 class="u-card-h3 hidden-375 ">Data Dashboard Healthcare</h3>
          
 
           <p class="u-card-p">
@@ -240,7 +245,7 @@
           <div class="card-row7">
             <div class="inner-universal-div-1line">
           <h3 class="u-card-h3 have2-hidden">Profesional Art Printing Data</h3>
-          <h3 class="u-card-h3 ">Wensite Portfolio</h3>
+          <h3 class="u-card-h3 hidden-375 ">Wensite Portfolio</h3>
           
 
           <p class="u-card-p">
