Erased extra br tag

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
         <div class="card-row2">
           <div class="inner-universal-div-2lines">
             <h3 class="u-card-h3">
-              Profesional Art Printing Data
+              Profesional 12Art Printing Data
             </h3>
 
             <p class="u-card-p">
-              A daily selection of privately <br />
-              personalized reads; no accounts or <br />
-              sign-ups required. has been the <br />
+              A daily selection of privately 
+              personalized reads; no accounts or 
+              sign-ups required. has been the 
               industry's standard
             </p>
 
