Added  grid height

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <li>Ruby</li>
             </ul>
           </div>
-          <button class="u-button-card ">See Project</button>
+          <button class="u-button-card button-1 ">See Project</button>
         </div>
         <div class="card-row5">
           <div class="inner-universal-div-2lines">
@@ -247,8 +247,8 @@
         </p>
         <div class="buton-resume-div">
           <button class="about-me-button">Get My Resume</button>
-          <img class="line-image-about " src="images/line.svg" alt="line-division" />
-          <img class="line-division-aboutme-desk hidden-375" src="images/line-division-aboutme-desktp.png"
+         
+          <img class="line-division-aboutme-desk " src="images/line-division-aboutme-desktp.png"
             alt="line-division" />
         </div>
       </div>
