--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   gtag('config', 'G-8STG08DKST');
 </script>
-  <title>Portfolio</title>
+  <title>Jorge Polo-Portfolio</title>
 </head>
 
 <body>
