Added alt names for images

--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
         </p>
         <ul class="icons">
           <li>
-            <a href="https://github.com/jpol01"><img src="images/icons/github.svg" alt="Github-img" /></a>
+            <a href="https://github.com/jpol01"><img src="images/icons/github.svg" alt="Github-icone-imgage" /></a>
           </li>
 
           <li>
             <a href="https://www.linkedin.com/in/jorge-polo-b00b44155/"><img src="images/icons/lin.svg"
-                alt="Linkin-image" /></a>
+                alt="Linkedin-icone-image" /></a>
           </li>
 
           <li>
-            <a href="https://angel.co/"><img src="images/icons/peace.svg" alt="Angellist-website-image" /></a>
+            <a href="https://angel.co/"><img src="images/icons/peace.svg" alt="Angellist-icone-image" /></a>
           </li>
 
           <li>
-            <a href="https://twitter.com/Jpol1902"><img src="images/icons/twitt.svg" alt="twitter-image" /></a>
+            <a href="https://twitter.com/Jpol1902"><img src="images/icons/twitt.svg" alt="twitter-icone-image" /></a>
           </li>
 
           <li>
-            <a href="https://medium.com/"><img src="images/icons/medium.svg" alt="Medium-website-image" /></a>
+            <a href="https://medium.com/"><img src="images/icons/medium.svg" alt="Medium-icone-image" /></a>
           </li>
         </ul>
       </div>
@@ -93,7 +93,7 @@
         <div class="title-container">
           <h3 class="internal-title">My Recent Works</h3>
 
-          <img class="line-image" src="images/line.svg" alt="line-division" />
+          <img class="line-image" src="images/line.svg" alt="line-division-image" />
         </div>
       </div>
     </div>
@@ -101,7 +101,7 @@
     <div class="previous-works-container">
       <div class="card-row1">
         <div class="card1-img-container">
-          <img class="card-img-size" src="images/card-image/card1.svg" alt="previous-work-1" />
+          <img class="card-img-size" src="images/card-image/card1.svg" alt="first-previous-work-image" />
         </div>
 
         <div class="container-info-card1">
@@ -258,7 +258,7 @@
           <button class="about-me-button">Get My Resume</button>
          
           <img class="line-division-aboutme-desk " src="images/line-division-aboutme-desktp.png"
-            alt="line-division" />
+            alt="line-division-image" />
         </div>
       </div>
 
@@ -267,7 +267,7 @@
           <ul class="about-me-internal-list">
             <li>
               <div class="about-me-internal-title">
-                <img src="images/icons/rombo.svg" alt="circle" />
+                <img src="images/icons/rombo.svg" alt="circle-image" />
                 Language
               </div>
             </li>
@@ -282,7 +282,7 @@
           <ul class="about-me-internal-list">
             <li>
               <div class="about-me-internal-title">
-                <img src="images/icons/square.svg" alt="circle" />
+                <img src="images/icons/square.svg" alt="circle-image" />
                 Frameworks
               </div>
             </li>
@@ -298,7 +298,7 @@
           <ul class="about-me-internal-list">
             <li>
               <div class="about-me-internal-title">
-                <img src="images/icons/circle.svg" alt="circle" />
+                <img src="images/icons/circle.svg" alt="circle-image" />
                 Skills
               </div>
             </li>
@@ -345,27 +345,27 @@
     <div class="icons icons-desktop">
       <ul class="icons-footer">
         <li>
-          <a href="https://github.com/jpol01"><img src="images/icons/icons-dark/git-dark.svg" alt="Github-img" /></a>
+          <a href="https://github.com/jpol01"><img src="images/icons/icons-dark/git-dark.svg" alt="Github-icone-image" /></a>
         </li>
 
         <li>
           <a href="https://www.linkedin.com/in/jorge-polo-b00b44155/"><img src="images/icons/icons-dark/linked-dark.svg"
-              alt="Linkin-image" /></a>
+              alt="Linkedin-icone-image" /></a>
         </li>
 
         <li>
           <a href="https://angel.co/"><img src="images/icons/icons-dark/angel-list-dark.svg"
-              alt="Angellist-website-image" /></a>
+              alt="Angellist-icone-image" /></a>
         </li>
 
         <li>
           <a href="https://twitter.com/Jpol1902"><img src="images/icons/icons-dark/twitter-dark.svg"
-              alt="twitter-image" /></a>
+              alt="twitter-icone-image" /></a>
         </li>
 
         <li>
           <a href="https://medium.com/"><img class="medium" src="images/icons/icons-dark/Medium-dark.svg"
-              alt="Medium-website-image" /></a>
+              alt="Medium-website-icone-image" /></a>
         </li>
       </ul>
     </div>
