Added a to the navbar

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           <i class="fas fa-bars"></i>
         </div>
         <ul class="header-menu">
-          <li>Portfolio</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li> <a href="#container-grid-pworks"> Portfolio</a> </li>
+          <li> <a href="#about-me-introduction">About </a></li>
+          <li><a href="#intro-contact-desktop">Contact </a></li>
           <li><i class="far fa-envelope"></i></li>
         </ul>
       </nav>
@@ -131,7 +131,7 @@
         <div class="card-row2">
           <div class="inner-universal-div-2lines">
             <h3 class="u-card-h3">
-              Profesional 12Art Printing Data
+              Profesional Art Printing Data
             </h3>
 
             <p class="u-card-p">
