Added the anchor

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           <i class="fas fa-bars"></i>
         </div>
         <ul class="header-menu">
-          <li> <a href="#container-grid-pworks"> Portfolio</a> </li>
-          <li> <a href="#about-me-introduction">About </a></li>
-          <li><a href="#intro-contact-desktop">Contact </a></li>
+          <li>  <a href="#">  Portfolio </a></li>
+          <li>  <a href="#">About</a> </li>
+          <li> <a href="#">Contact</a></li>
           <li><i class="far fa-envelope"></i></li>
         </ul>
       </nav>
@@ -63,7 +63,7 @@
         </p>
         <ul class="icons">
           <li>
-            <a href="https://github.com/jpol01"><img src="images/icons/github.svg" alt="Github-icone-imgage" /></a>
+            <a href="https://github.com/jpol01"><img src="images/icons/github.svg" alt="Github-icone-image" /></a>
           </li>
 
           <li>
@@ -126,8 +126,9 @@
         </div>
       </div>
 
-      <div class="container-grid-pworks">
+      <div class="container-grid-pworks" >
 
+        
         <div class="card-row2">
           <div class="inner-universal-div-2lines">
             <h3 class="u-card-h3">
@@ -244,7 +245,7 @@
         </div>
       </div>
     </div>
-
+     
     <div class="about-me-main">
       <div class="about-me-introduction">
         <h3 class="about-me-h3">About me</h3>
