Added internal links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 
 <body>
 
-
   <section class="header1">
     <header>
       <a class="company">Jorge Polo</a>
@@ -39,9 +38,9 @@
           <i class="fas fa-bars"></i>
         </div>
         <ul class="header-menu">
-          <li>  <a href="#">  Portfolio </a></li>
-          <li>  <a href="#">About</a> </li>
-          <li> <a href="#">Contact</a></li>
+          <li>  <a href="#portfolio0101">  Portfolio </a></li>
+          <li>  <a href="#aboutme-0101">About</a> </li>
+          <li> <a href="#contact0101">Contact</a></li>
           <li><i class="far fa-envelope"></i></li>
         </ul>
       </nav>
@@ -126,14 +125,12 @@
         </div>
       </div>
 
-      <div class="container-grid-pworks" >
-
-        
+       <a id="portfolio0101"></a><div class="container-grid-pworks" > </a>
         <div class="card-row2">
           <div class="inner-universal-div-2lines">
-            <h3 class="u-card-h3">
+           <h3 class="u-card-h3">
               Profesional Art Printing Data
-            </h3>
+            </h3> 
 
             <p class="u-card-p">
               A daily selection of privately 
@@ -246,7 +243,7 @@
       </div>
     </div>
      
-    <div class="about-me-main">
+   <a id="aboutme-0101"> <div class="about-me-main"> </a>
       <div class="about-me-introduction">
         <h3 class="about-me-h3">About me</h3>
         <p class="about-me-p">
@@ -314,8 +311,8 @@
     </div>
   </section>
 
-  <footer class="contact-form">
-    <div class="intro-contact-desktop">
+  <a id="contact0101"> <footer class="contact-form"></a>
+   <div class="intro-contact-desktop">
       <div class="contact-intro">
         <p>
           I'm always interested in hearing about new projects, so if you'd
